Sun Jun 15 22:30:30 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (rb_reg_search): use local variable.  a patch from wanabe
	  <s.wanabe AT gmail.com> in [ruby-dev:34537].  [ruby-dev:34492]

Sun Jun 15 22:21:07 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (dln_find_1): prior files with extensions to files sans
	  extensions.  [ruby-core:16517]

Sun Jun 15 22:19:33 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* sprintf.c (rb_f_sprintf): should protect temporary string from
	  GC.   [ruby-dev:34480]

Sun Jun 15 22:17:35 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regex.c (re_search): string might be NULL.  [ruby-core:16478]

Sun Jun 15 22:13:13 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* time.c (rb_strftime): check errno to detect strftime(3)'s error.
	  this is workaround for recent version of MSVCRT.
	  [ruby-dev:34456]

Sun Jun 15 22:10:14 2008  Akinori MUSHA  <knu@iDaemons.org>

	* lib/yaml/types.rb: Likewise, pass self to YAML::quick_emit;
	  merged from 1.9.

	* lib/yaml.rb (quick_emit): use combination of object_id and hash to
	  identify repeated object references, since GC will reuse memory of
	  objects during output of YAML. [ruby-Bugs-8548] [ruby-Bugs-3698];
	  merged from 1.9.

Sun Jun 15 22:05:45 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/syck/rubyext.c: Node#value defined twice.

	* lib/yaml/: several method redefinitions causing warnings.

Sun Jun 15 22:03:36 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* marshal.c (w_object): add volatile to avoid potential GC bug.  a
	  patch from Tomoyuki Chikanaga <chikanag at nippon-control-system.co.jp>
	  in [ruby-dev:34311].

Sun Jun 15 21:57:19 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (rb_reg_quote): should always copy the quoting string.
	  [ruby-core:16235]

Sun Jun 15 21:26:54 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/net/pop.rb (Net::POP3::do_finish): clear @n_mails and
	  @n_bytes as well.  [ruby-core:16144]
