@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2008-06-15"
 #define RUBY_VERSION_CODE 185
 #define RUBY_RELEASE_CODE 20080615
-#define RUBY_PATCHLEVEL 200
+#define RUBY_PATCHLEVEL 201
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
